# chuk-mcp-linkedin

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ATOMIC_CHARTS_REFACTOR.md  COMPONENT_REORGANIZATION.md  COMPONENT_ROADMAP.md  DOCUMENT_COMPOSITION_EXTENSION.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  TOKEN_THEME_AUDIT.md  constraints.txt  coverage.json  docker-compose.yml  fly.toml  preview_post.py  pyproject.toml
.github/workflows/: ci.yml
.linkedin_drafts/: draft_1_1760828478.32347.json  draft_2_1760828662.621865.json  draft_3_1760829133.968204.json
.linkedin_drafts/previews/: draft_1_1760828478.32347.html  draft_2_1760828662.621865.html  draft_3_1760829133.968204.html
docs/: ARCHITECTURE.md  CI_CD.md  DEVELOPMENT.md  DOCKER.md  KEYCLOAK_OAUTH_SETUP.md  OAUTH.md  OAUTH_SETUP.md  PREVIEW.md  README.md  THEMES.md  TOKENS.md
examples/: README.md  complete_example.py  comprehensive_showcase.py  demo_atomic_charts.py  demo_charts_preview.py  demo_document_composition.py  demo_document_layouts_preview.py  demo_document_page_preview.py  demo_document_upload_interactive.py  demo_draft_workflow.py  demo_mcp_features.py  demo_new_features_preview.py  demo_user_isolation.py  demo_visual_chart_component.py  hello_preview.py  oauth_linkedin_example.py  preview_chart_post.py  preview_example.py  publish_chart_with_design_system.py  publish_clean_chart.py  publish_document_post.py  publish_image_post.py  publish_multi_image_post.py  publish_poll_post.py  publish_test_connections.py  publish_text_post.py  publish_video_post.py  publish_visual_chart.py  showcase_all_components.py  showcase_media_types.py  test_api_publish.py  test_publish_now.py  tokens_showcase.py
outputs/: comprehensive_showcase.html
scripts/: README.md  get_linkedin_token.py  get_me_endpoint.py  get_member_id.html  get_member_id.py  get_person_urn.py  get_userinfo.py  test_actual_post.py  test_connection.py  try_post.py
src/chuk_mcp_linkedin/: __init__.py  async_server.py  cli.py  composition.py  manager.py  manager_factory.py  oauth_context.py  preview.py  registry.py  renderer.py  server.py  variants.py
src/chuk_mcp_linkedin/api/: __init__.py  client.py  config.py  documents.py  errors.py  linkedin_client.py  media.py  posts.py
src/chuk_mcp_linkedin/components/: __init__.py  base.py  big_stat.py  key_takeaway.py  quote.py  timeline.py
src/chuk_mcp_linkedin/components/content_blocks/: __init__.py
src/chuk_mcp_linkedin/components/data_viz/: __init__.py  charts.py  infographics.py  metrics.py  progress.py  tables.py
src/chuk_mcp_linkedin/components/interactive/: __init__.py
src/chuk_mcp_linkedin/documents/: __init__.py  composition.py
src/chuk_mcp_linkedin/models/: __init__.py  chart_models.py  content_models.py
src/chuk_mcp_linkedin/oauth/: __init__.py  keycloak_provider.py  linkedin_client.py  passthrough_provider.py  provider.py
src/chuk_mcp_linkedin/posts/: __init__.py  composition.py
src/chuk_mcp_linkedin/preview/: __init__.py  artifact_preview.py  component_renderer.py  post_preview.py
src/chuk_mcp_linkedin/themes/: __init__.py  theme_manager.py
src/chuk_mcp_linkedin/tokens/: __init__.py  design_tokens.py  engagement_tokens.py  structure_tokens.py  text_tokens.py
src/chuk_mcp_linkedin/tools/: __init__.py  composition_tools.py  draft_tools.py  publishing_tools.py  registry_tools.py  theme_tools.py
src/chuk_mcp_linkedin/utils/: __init__.py  document_converter.py
test_files/: create_dummy_files.py  create_test_images.py  test_document.docx  test_presentation.pptx
tests/: conftest.py  test_api_client.py  test_api_documents.py  test_api_media.py  test_api_posts.py  test_artifact_preview.py  test_composition.py  test_composition_tools_coverage.py  test_manager.py  test_manager_factory.py  test_models.py  test_oauth_modules.py  test_preview.py  test_registry.py  test_renderer.py  test_tools.py  test_utils.py  test_variants.py
tests/components/: test_component_renderer.py  test_typography.py  test_visual_elements.py
tests/components/layouts/: test_document_layouts.py
tests/posts/: __init__.py  test_composition.py
tests/posts/components/: test_base.py
tests/themes/: __init__.py  test_theme_manager.py
tests/tokens/: test_design_tokens.py  test_engagement_tokens.py  test_structure_tokens.py  test_text_tokens.py
(+102 files in other folders)
